--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,9 @@ dj-database-url==2.3.0
 Django==5.1.7
 django-cors-headers==4.7.0
 djangorestframework==3.15.2
+gunicorn==23.0.0
 idna==3.10
+packaging==24.2
 psycopg==3.2.6
 psycopg2-binary==2.9.10
 python-dotenv==1.0.1
